# B-tcrimer

./: .gitignore  .replit  .vercelignore  CLAUDE.md  README.md  app.py  app_new.py  ask_secrets.py  automated_data_collector.py  collect_more_data.py  config.ini  fetch_crypto_data.py  main.py  pyproject.toml  railway.json  replit.md  requirements.txt  setup_data_feeds.py  simple_data_fetch.py  simple_news_feed.py  streamlit_app.py  test_app.py  test_results.json
.streamlit/: config.toml  custom.css
analysis/: __init__.py  backtesting.py  domino_cascade.py  ml_predictions.py  portfolio_optimizer.py  risk_management.py  sentiment_analysis.py  signal_generator.py  technical_indicators.py
b-tcrimer-api/: .env  .env.example  Procfile  README.md  auth.py  backtest.py  database.py  docker-compose.yml  email_client.py  main.py  portfolio.py  rate_limiter.py  requirements.txt  signals.py  stripe_integration.py
components/: __init__.py  financial_cards.py  status_indicator.py
data_collection/: __init__.py  custom_sources.py  exchange_data.py  news_data.py  social_data.py  web_scraper.py
database/: __init__.py  models.py  operations.py
logs/: crypto_analysis.log.1  crypto_analysis.log.4
marketing/: automation_plan.md
pages/: __init__.py  admin.py  alerts.py  backtesting.py  dashboard.py  data_sources.py  debug.py  domino_cascade.py  logs.py  onboarding.py  performance_dashboard.py  profit_tracker.py  sentiment.py  technical_analysis.py  testing.py
tests/: __init__.py  simple_test_runner.py  test_auth.py  test_performance.py  test_runner.py
utils/: __init__.py  (+9 more)
(+10 files in other folders)
