[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.77",
    "feedparser>=6.0.11",
    "google-cloud-language>=2.17.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "tweepy>=4.15.0",
    "twilio>=9.6.0",
]
